fixes current QA as well as pixel perfect: 1) Multipl UI fixes (font, color, spacing, arrangements, etc) 2) Does not fix white bar issue

--- a/src/components/BackupLinkCard/BackupLinkCard.scss
+++ b/src/components/BackupLinkCard/BackupLinkCard.scss
@@ -24,9 +24,10 @@
   }
 
   &_description {
-    width: 400px;
+    width: 365px;
     text-align: left;
     margin: 0 auto;
+    padding-left: 10px;
   }
 
   &_icon {
