--- a/src/components/StatusMessage/StatusMessage.scss
+++ b/src/components/StatusMessage/StatusMessage.scss
@@ -17,7 +17,7 @@
 
   &_circle {
     margin: 0 auto;
-    margin-top: 149px;
+    margin-top: 160px;
     margin-left: 5px;
     display: block;
     width: 263px;
