--- a/src/components/WalletChoose/WalletChoose.scss
+++ b/src/components/WalletChoose/WalletChoose.scss
@@ -17,8 +17,7 @@
   }
 
   h1 {
-    color: #fff;
-    font-family: sans-serif;
+    color: #1D1E21;
     font-weight: 300;
     line-height: 1.6;
     color: $color-text-2;
